@@ -1,25 +1,25 @@
 package org.apereo.cas.logout.slo;
 
+import org.apereo.cas.CasProtocolConstants;
 import org.apereo.cas.authentication.AuthenticationServiceSelectionPlan;
 import org.apereo.cas.authentication.principal.WebApplicationService;
 import org.apereo.cas.logout.DefaultSingleLogoutRequestContext;
 import org.apereo.cas.logout.LogoutHttpMessage;
 import org.apereo.cas.logout.LogoutRequestStatus;
-import org.apereo.cas.logout.SingleLogoutExecutionRequest;
 import org.apereo.cas.services.RegisteredService;
 import org.apereo.cas.services.RegisteredServiceLogoutType;
 import org.apereo.cas.services.ServicesManager;
+import org.apereo.cas.services.WebBasedRegisteredService;
 import org.apereo.cas.util.LoggingUtils;
+import org.apereo.cas.util.function.FunctionUtils;
 import org.apereo.cas.util.http.HttpClient;
-
+import org.apereo.cas.web.HttpMessage;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
-
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Objects;
@@ -53,9 +53,10 @@ public abstract class BaseSingleLogoutServiceMessageHandler implements SingleLog
                                                          final SingleLogoutExecutionRequest context) {
         if (singleLogoutService.isLoggedOutAlready()) {
             LOGGER.debug("Service [{}] is already logged out.", singleLogoutService);
-            return new ArrayList<>(0);
+            return new ArrayList<>();
         }
-        val selectedService = (WebApplicationService) authenticationRequestServiceSelectionStrategies.resolveService(singleLogoutService);
+        val selectedService = FunctionUtils.doUnchecked(() ->
+            (WebApplicationService) authenticationRequestServiceSelectionStrategies.resolveService(singleLogoutService));
 
         LOGGER.trace("Processing logout request for service [{}]...", selectedService);
         val registeredService = servicesManager.findServiceBy(selectedService);
@@ -67,7 +68,7 @@ public abstract class BaseSingleLogoutServiceMessageHandler implements SingleLog
         LOGGER.debug("Prepared logout url [{}] for service [{}]", logoutUrls, selectedService);
         if (logoutUrls == null || logoutUrls.isEmpty()) {
             LOGGER.debug("Service [{}] does not support logout operations given no logout url could be determined.", selectedService);
-            return new ArrayList<>(0);
+            return new ArrayList<>();
         }
 
         LOGGER.trace("Creating logout request for [{}] and ticket id [{}]", selectedService, ticketId);
@@ -76,11 +77,12 @@ public abstract class BaseSingleLogoutServiceMessageHandler implements SingleLog
 
     @Override
     public boolean supports(final SingleLogoutExecutionRequest context, final WebApplicationService singleLogoutService) {
-        val selectedService = (WebApplicationService) authenticationRequestServiceSelectionStrategies.resolveService(singleLogoutService);
-        val registeredService = this.servicesManager.findServiceBy(selectedService);
+        val selectedService = FunctionUtils.doUnchecked(() ->
+            (WebApplicationService) authenticationRequestServiceSelectionStrategies.resolveService(singleLogoutService));
+        val registeredService = (WebBasedRegisteredService) this.servicesManager.findServiceBy(selectedService);
 
         return registeredService != null
-            && registeredService.getAccessStrategy().isServiceAccessAllowed()
+            && registeredService.getAccessStrategy().isServiceAccessAllowed(registeredService, selectedService)
             && registeredService.getLogoutType() != RegisteredServiceLogoutType.NONE
             && supportsInternal(singleLogoutService, registeredService, context);
     }
@@ -91,14 +93,14 @@ public abstract class BaseSingleLogoutServiceMessageHandler implements SingleLog
             LOGGER.trace("Creating back-channel logout request based on [{}]", request);
             val logoutRequest = createSingleLogoutMessage(request);
             return sendSingleLogoutMessage(request, logoutRequest);
-        } catch (final Exception e) {
+        } catch (final Throwable e) {
             LoggingUtils.error(LOGGER, e);
         }
         return false;
     }
 
     @Override
-    public SingleLogoutMessage createSingleLogoutMessage(final SingleLogoutRequestContext logoutRequest) {
+    public SingleLogoutMessage createSingleLogoutMessage(final SingleLogoutRequestContext logoutRequest) throws Throwable {
         return this.logoutMessageBuilder.create(logoutRequest);
     }
 
@@ -148,7 +150,6 @@ public abstract class BaseSingleLogoutServiceMessageHandler implements SingleLog
      * @param context           the context
      * @return the logout request
      */
-    @SneakyThrows
     protected SingleLogoutRequestContext createLogoutRequest(final String ticketId,
                                                              final WebApplicationService selectedService,
                                                              final RegisteredService registeredService,
@@ -157,7 +158,7 @@ public abstract class BaseSingleLogoutServiceMessageHandler implements SingleLog
         val logoutRequest = DefaultSingleLogoutRequestContext.builder()
             .ticketId(ticketId)
             .service(selectedService)
-            .logoutUrl(new URL(logoutUrl.getUrl()))
+            .logoutUrl(FunctionUtils.doUnchecked(() -> new URI(logoutUrl.getUrl()).toURL()))
             .logoutType(logoutUrl.getLogoutType())
             .registeredService(registeredService)
             .executionRequest(context)
@@ -190,35 +191,21 @@ public abstract class BaseSingleLogoutServiceMessageHandler implements SingleLog
     protected boolean sendSingleLogoutMessage(final SingleLogoutRequestContext request, final SingleLogoutMessage logoutMessage) {
         val logoutService = request.getService();
         LOGGER.trace("Preparing logout request for [{}] to [{}]", logoutService.getId(), request.getLogoutUrl());
-        val msg = getLogoutHttpMessageToSend(request, logoutMessage);
+        val msg = prepareLogoutHttpMessageToSend(request, logoutMessage);
         LOGGER.debug("Prepared logout message to send is [{}]. Sending...", msg);
         val result = sendMessageToEndpoint(msg, request, logoutMessage);
         logoutService.setLoggedOutAlready(result);
         return result;
     }
 
-    /**
-     * Send message to endpoint.
-     *
-     * @param msg           the msg
-     * @param request       the request
-     * @param logoutMessage the logout message
-     * @return true/false
-     */
-    protected boolean sendMessageToEndpoint(final LogoutHttpMessage msg,
+    protected boolean sendMessageToEndpoint(final HttpMessage msg,
                                             final SingleLogoutRequestContext request,
                                             final SingleLogoutMessage logoutMessage) {
         return this.httpClient.sendMessageToEndPoint(msg);
     }
-
-    /**
-     * Gets logout http message to send.
-     *
-     * @param request       the request
-     * @param logoutMessage the logout message
-     * @return the logout http message to send
-     */
-    protected LogoutHttpMessage getLogoutHttpMessageToSend(final SingleLogoutRequestContext request, final SingleLogoutMessage logoutMessage) {
-        return new LogoutHttpMessage(request.getLogoutUrl(), logoutMessage.getPayload(), this.asynchronous);
+    
+    @Override
+    public HttpMessage prepareLogoutHttpMessageToSend(final SingleLogoutRequestContext request, final SingleLogoutMessage logoutMessage) {
+        return new LogoutHttpMessage(CasProtocolConstants.PARAMETER_LOGOUT_REQUEST, request.getLogoutUrl(), logoutMessage.getPayload(), this.asynchronous);
     }
 }
